Wed Jul 30 18:41:27 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * tests/Oneway_Send_Timeouts/Client.cpp:
          Add documentation. Force flush the connection after async tests
          so the queued data doesn't affect the synchronous tests.

        * tests/Oneway_Send_Timeouts/Server.h:
          Remove unused members.

Wed Jul 30 14:13:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Cache_Manager.cpp:
          No need to check a pointer before deleting it. Simplified
          mark_invalid_i

        * tao/GIOP_Message_Base.cpp:
          Moved variable into a try block, only used there

Wed Jul 30 13:19:45 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * utils/catior/Makefile.am:

          Regenerate (link with ZIOP libraries).

Wed Jul 30 12:13:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/default_client.cpp:
          Use switch, makes the code more readable, explicit, and faster

Wed Jul 30 11:48:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Muxed_TMS.cpp {dispatch_reply):
          Check rd before we use it and just have one single point of
          return

Tue Jul 29 22:30:27 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/Makefile.am:

          Regenerate (adds bzip2 support).

Tue Jul 29 19:50:46 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tao/Queued_Message.h:

          Cleaned up comments.

        * tao/Transport.cpp (send_reply_message_i):

          When the flushing strategy indicates MUST_FLUSH, flush the whole
          transport instead of the "current" message.  Because the lock was
          released and reacquired, the is no way to identify the "current"
          message and ensure it wasn't already destroyed.  This should fix
          bug #3163.

Tue Jul 29 18:26:14 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/Makefile.am:

          Regenerate.
