@@ -12,9 +12,9 @@ ACE_RCSID(Hello, client, "client.cpp,v 1.5 2002/01/29 20:21:07 okellogg Exp")
 const char *ior = "file://test.ior";
 
 int
-parse_args (int argc, char *argv[])
+parse_args (int argc, ACE_TCHAR *argv[])
 {
-  ACE_Get_Opt get_opts (argc, argv, "k:");
+  ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("k:"));
   int c;
 
   while ((c = get_opts ()) != -1)
@@ -55,9 +55,7 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 
       PortableInterceptor::register_orb_initializer (orb_initializer.in ());
 
-      CORBA::ORB_var orb =
-        CORBA::ORB_init (argc, argv);
-
+      CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
 
       if (parse_args (argc, argv) != 0)
         return 1;
@@ -65,10 +63,8 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
       CORBA::Object_var tmp =
         orb->string_to_object(ior );
 
-
       Test::Hello_var hello =
         Test::Hello::_narrow(tmp.in () );
-
 
       if (CORBA::is_nil (hello.in ()))
         {
@@ -82,7 +78,6 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 
       CORBA::String_var the_string =
         hello->get_string ();
-
 
       ACE_ERROR_RETURN ((LM_DEBUG,
                             "Error - the remote call succeeded which is bloody miraculous given that no server is running !!\n",
